force-app/main/default/objects/MessagingSession/fields/GC_External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>GC_External_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>GC External Contact Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>