force-app/main/default/objects/MessagingSession/fields/GC_GPE_Config__c.field-meta.xml
<CustomField>
    <fullName>GC_GPE_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GC GPE Config</label>
    <referenceTo>Genesys_GPE_Config__c</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>