force-app/main/default/objects/MessagingSession/fields/GC_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>GC_Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>GC Session Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>