force-app/main/default/objects/MessagingSession/fields/Pre_chat_email__c.field-meta.xml
<CustomField>
    <fullName>Pre_chat_email__c</fullName>
    <label>Pre-chat email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>